chore: add genres andpoints, implement mappers to convert from and to rest models, wip.
