# api/openapi.yaml
@@ -14,6 +14,8 @@ tags:
     description: Averything about the book authors associated with the books
   - name: book
     description: Everything about the books in the store
+  - name: genre
+    description: Everything about the genre in the store
   - name: store
     description: Everything about the orders and inventory in the store
   - name: health
@@ -95,42 +97,6 @@ paths:
         "500":
           description: Server error
 
-    patch:
-      tags:
-        - discount
-      summary: Update an existing discount
-      description: Update an existing discount by Id
-      operationId: UpdateDiscount
-      parameters:
-        - name: discountId
-          in: path
-          description: Id of discount to return
-          required: true
-          schema:
-            type: string
-      requestBody:
-        description: Update an existing discount in the store
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/DiscountCodeProperties"
-        required: true
-      responses:
-        "200":
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/DiscountCode"
-        "400":
-          description: Invalid ID supplied
-        "404":
-          description: Discount not found
-        "422":
-          description: Validation exception
-        "500":
-          description: Server error
-
     delete:
       tags:
         - discount
@@ -145,6 +111,8 @@ paths:
           schema:
             type: string
       responses:
+        "200":
+          description: Successful operation
         "400":
           description: Invalid discountId value
         "404":
@@ -260,6 +228,8 @@ paths:
           schema:
             type: string
       responses:
+        "200":
+          description: Successfully deleted
         "400":
           description: Invalid authorId value
         "404":
@@ -267,7 +237,7 @@ paths:
         "500":
           description: Server error
 
-  /book:
+  /books:
     post:
       tags:
         - book
@@ -282,7 +252,7 @@ paths:
               $ref: "#/components/schemas/NewBook"
         required: true
       responses:
-        "201":
+        "200":
           description: Successful operation
           content:
             application/json:
@@ -339,7 +309,7 @@ paths:
           schema:
             type: string
       requestBody:
-        description: Update an existent pet in the store
+        description: Update an existent book in the store
         content:
           application/json:
             schema:
@@ -375,14 +345,15 @@ paths:
           schema:
             type: string
       responses:
+        "200":
+          description: Successful operation
         "400":
           description: Invalid bookId value
         "404":
           description: BookId not found
         "500":
           description: Server error
-
-  /book/findByAuthorId:
+  /books/findByAuthorId:
     get:
       tags:
         - book
@@ -479,6 +450,87 @@ paths:
         "500":
           description: Server error
 
+  /genres:
+    post:
+      tags:
+        - genre
+      summary: Add a new genere to the store
+      description: Add a new genre to the store
+      operationId: AddGenre
+      requestBody:
+        description: Create a new genre in the store
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/NewGenre"
+        required: true
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Genre"
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
+        "500":
+          description: Server error
+
+  /genres/{genreId}:
+    get:
+      tags:
+        - genre
+      summary: Finds genre by Id
+      description: Returns genre for given Id
+      operationId: GetGenreById
+      parameters:
+        - name: genreId
+          in: path
+          description: Id of genre to return
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Genre"
+        "400":
+          description: Invalid parameters
+        "404":
+          description: Genr not found
+        "500":
+          description: Server error
+
+    delete:
+      tags:
+        - genre
+      summary: Deletes a genere
+      description: delete a genere
+      operationId: DeleteGenre
+      parameters:
+        - name: genreId
+          in: path
+          description: GenereId to delete
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Successful operation
+        "400":
+          description: Invalid genereId value
+        "404":
+          description: Genre not found
+        "500":
+          description: Server error
+
   /store/inventory:
     get:
       tags:
@@ -510,7 +562,7 @@ paths:
               $ref: "#/components/schemas/NewOrder"
       responses:
         "200":
-          description: successful operation
+          description: Successful operation
           content:
             application/json:
               schema:
@@ -602,7 +654,7 @@ paths:
             format: int64
       responses:
         "200":
-          description: successful operation
+          description: Successful operation
         "400":
           description: Invalid ID supplied
         "404":
@@ -660,6 +712,17 @@ components:
           type: number
           description: the price of this book in Dollar
           format: double
+        available:
+          type: integer
+          format: int32
+          description: The number of available items
+        status:
+          type: string
+          description: the inventory state of the book
+          enum:
+            - available
+            - re-ordered
+            - out-of-stock
       required: [title, release, authors, price, available, status]
 
     BookProperties:
@@ -705,6 +768,17 @@ components:
           type: number
           description: the price of this book in Dollar
           format: double
+        available:
+          type: integer
+          format: int32
+          description: The number of available items
+        status:
+          type: string
+          description: the inventory state of the book
+          enum:
+            - available
+            - re-ordered
+            - out-of-stock
 
     Book:
       type: object
@@ -729,7 +803,9 @@ components:
           items:
             $ref: "#/components/schemas/Author"
         generes:
-          $ref: "#/components/schemas/Genre"
+          type: array
+          items:
+            $ref: "#/components/schemas/Genre"
         series:
           type: string
         edition:
@@ -783,7 +859,7 @@ components:
         code:
           type: string
           example: DISCOUNT_20
-      required: [precenetage_discount, valid_from, valid_to, code]
+      required: [percentage_discount, valid_from, valid_to, code]
 
     DiscountCode:
       type: object
@@ -803,20 +879,7 @@ components:
         code:
           type: string
           example: DISCOUNT_20
-      required: [id, precenetage_discount, valid_from, valid_to, code]
-
-    DiscountCodeProperties:
-      type: object
-      properties:
-        percentage_discount:
-          type: integer
-          format: int32
-        valid_from:
-          type: string
-          format: date
-        valid_to:
-          type: string
-          format: date
+      required: [id, percentage_discount, valid_from, valid_to, code]
 
     NewAuthor:
       type: object
@@ -888,6 +951,14 @@ components:
           format: date
           example: 2024-12-09
 
+    NewGenre:
+      type: object
+      properties:
+        name:
+          type: string
+          example: horror
+      required: [name]
+
     Genre:
       type: object
       properties:
@@ -941,16 +1012,7 @@ components:
           $ref: "#/components/schemas/Address"
         shipping_address_override:
           $ref: "#/components/schemas/Address"
-        status:
-          type: string
-          description: Order Status
-          example: approved
-          enum:
-            - placed
-            - shipped
-            - delivered
-            - canceled
-      required: [book_id, customer_id, shipping_date, quantity, status]
+      required: [book_id, customer_id, billing_address, shipping_date, quantity]
 
     Order:
       type: object
